# testJuceFont7-8

./: CMakeLists.txt  Main.cpp  MainComponent.cpp  MainComponent.h  MyriadPro-Bold.jucefont  script_build_Xcode7.sh  script_build_Xcode8.sh  vf_FreeTypeFaces.cpp  vf_FreeTypeFaces.h
